test/sema/trait_objects/qualified_path_call_method_with_self_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {
  fn val(self: Self) {}
}

struct S {
  impl A;
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:21: error: methods that take 'self' by value cannot be called with trait objects
  @<impl A impl A>::val(S{});
}
